--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URL=mongodb://localhost:27017/instagram
+MONGO_URL=mongodb://localhost:27017/courseDB
 FRONTEND_URL=http://localhost:3000
 PORT=9000
