--- a/necxis/package.json
+++ b/necxis/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^7.1.1",
+    "@nextui-org/react": "^2.2.10",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
+    "flowbite-datepicker": "^1.2.6",
+    "flowbite-react": "^0.8.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "socket.io-client": "^4.7.5",
+    "react-icons": "^5.0.1",
+    "styled-components": "^6.1.8",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
@@ -22,6 +32,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "vanillajs-datepicker": "^1.3.4"
   }
 }
